force-app/main/default/objects/Feedback_Collector__c/Feedback_Collector__c.object-meta.xml
<CustomObject>
    <label>Feedback Collector</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Feedback Collector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Collector</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>