force-app/main/default/objects/Feedback_Collector__c/fields/CreatedDate_D__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_D__c</fullName>
    <label>CreatedDate_D</label>
    <length>255</length>
    <type>Text</type>
</CustomField>