force-app/main/default/objects/Feedback_Collector__c/fields/Efficiency_Rating__c.field-meta.xml
<CustomField>
    <fullName>Efficiency_Rating__c</fullName>
    <label>Efficiency Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>