force-app/main/default/objects/Feedback_Collector__c/fields/Feedback2__c.field-meta.xml
<CustomField>
    <fullName>Feedback2__c</fullName>
    <label>Feedback2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>