force-app/main/default/objects/Feedback_Collector__c/fields/Feedback3__c.field-meta.xml
<CustomField>
    <fullName>Feedback3__c</fullName>
    <label>Feedback3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>