force-app/main/default/objects/Feedback_Collector__c/fields/Friendliness_Rating__c.field-meta.xml
<CustomField>
    <fullName>Friendliness_Rating__c</fullName>
    <label>Friendliness Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>