force-app/main/default/objects/Feedback_Collector__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <label>Overall Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Okay</fullName>
            </value>
            <value>
                <fullName>Bad</fullName>
            </value>
            <value>
                <fullName>Very Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>