force-app/main/default/objects/Feedback_Collector__c/fields/Satisfaction_Rating__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_Rating__c</fullName>
    <label>Satisfaction Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>