force-app/main/default/objects/Feedback_Collector__c/fields/Sentiment_Score__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Score__c</fullName>
    <label>Sentiment Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>