force-app/main/default/objects/Feedback_Collector__c/fields/Test_Value__c.field-meta.xml
<CustomField>
    <fullName>Test_Value__c</fullName>
    <label>Test Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>